2004-07-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

        * docs/manual/states.xml: Grammar fix

2004-07-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* docs/manual/pads.xml: Grammar fix

2004-07-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* docs/manual/elements.xml: Fixed image reference

2004-07-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* docs/manual/goals.xml: Grammar fix

2004-07-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* docs/manual/motivation.xml:
	Bonobo is no longer "emerging" and added sentence regarding tcp plugins

2004-07-15  Zaheer Abbas Merali  <zaheerabbas at merali.org>

	* docs/manual/motivation.xml: Fix spelling

2004-07-15  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.h: 
	  Don't GST_ERROR_OBJECT smpty strings - Solaris doesn't like NULL
	  strings.
	* gst/gstelement.c (gst_element_class_init):
	  GError's are boxed, not objects
	* gst/gstmarshal.list:
	  update list for the fixed error signal

2004-07-14  Andy Wingo  <wingo@pobox.com>

	* gst/gsttag.c: Add a tag merge func for pointers. The header was
	there all along, but the function wasn't. (guile-gstreamer's build
	system uses the address of the function -- I wasn't actually
	trying to use this.)

2004-07-14  Andy Wingo  <wingo@pobox.com>

	* gst/gstpad.c (gst_pad_try_set_caps): Naive link functions (such
	as gst_pad_proxy_pad_link) just link to every other pad when they
	are called. In the case where the graph has cycles, this will mean
	that a call to try_set_caps will recurse. Allow this recursion
	and return OK, while we wait for the first try_set_caps to give a
	proper return value.
	(gst_pad_link_call_link_functions): Since this function is the
	only one to set the NEGOTIATING flag on a pad, if the flag is set
	it means that the link functions have indirectly recursed. If this
	happens, error out to avoid infinite recursion and an eventual
	SEGV.