@@ -1,3 +1,14 @@
+2004-07-15  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/gstelement.c: (gst_element_set_state):
+	* gst/gstpad.c: (gst_pad_try_set_caps):
+	* gst/gststructure.c:
+	* gst/gstthread.c: (gst_thread_child_state_change):
+	* gst/gstvalue.c: (gst_value_compare_double):
+	* gst/gstvalue.h:
+	* testsuite/parse/parse1.c: (main):
+	  debugging additions and style cleanups
+
 2004-07-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
         * docs/manual/states.xml: Grammar fix
@@ -26,7 +37,7 @@
 2004-07-15  Benjamin Otte  <otte@gnome.org>
 
 	* gst/gstelement.h: 
-	  Don't GST_ERROR_OBJECT smpty strings - Solaris doesn't like NULL
+	  Don't GST_ERROR_OBJECT empty strings - Solaris doesn't like NULL
 	  strings.
 	* gst/gstelement.c (gst_element_class_init):
 	  GError's are boxed, not objects
